src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <globalPicklist>Assignment_Type</globalPicklist>
        <label>Assignment Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <globalPicklist>Role</globalPicklist>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Role__c</columns>
        <columns>Region__c</columns>
        <columns>Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Services_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Role__c</columns>
        <columns>Region__c</columns>
        <columns>Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Services_Product</value>
        </filters>
        <label>All Services Products</label>
    </listViews>
    <recordTypes>
        <fullName>Services_Product</fullName>
        <active>true</active>
        <label>Services Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscription_Product</fullName>
        <active>true</active>
        <label>Subscription Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>